--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
   "name": "blogmanagement",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js",
-    "dev": "nodemon app.js",
-     "build": "npm rebuild bcrypt --build-from-source"
+    "dev": "nodemon app.js"
   },
   "keywords": [],
   "author": "",
@@ -14,13 +13,12 @@
   "type": "commonjs",
   "description": "",
   "dependencies": {
-    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "connect-mongo": "^5.1.0",
     "cookie-parser": "^1.4.7",
     "dotenv": "^16.4.7",
     "ejs": "^3.1.10",
     "express": "^4.21.2",
-    "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.18.1",
     "jsonwebtoken": "^9.0.2",
     "method-override": "^3.0.0",
