Add MongoDB URI, JWT secret, and port configuration to .env file

--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
-
+MONGODB_URI = mongodb+srv://harimoulimuthyala:9un3x5uhNMquU08r@cluster0.swgzs.mongodb.net/blog
+JWT_SECRET=MySecretBlog
+PORT=5000
