--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-MONGODB_URI = mongodb+srv://harimoulimuthyala:9un3x5uhNMquU08r@cluster0.swgzs.mongodb.net/blog
+MONGODB_URI = mongodb+srv://harimoulimuthyala:9un3x5uhNMquU08r@cluster0.swgzs.mongodb.net/blog?retryWrites=true&w=majority
 JWT_SECRET=MySecretBlog
 PORT=5000
